--- a/EfTestConsole/EfTestConsole.csproj
+++ b/EfTestConsole/EfTestConsole.csproj
@@ -67,6 +67,10 @@
       <Project>{6a9129a4-a568-4e68-a4f0-5fa7856288ff}</Project>
       <Name>Gazprom.BigBoy.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Gazprom.Data\Gazprom.Data.csproj">
+      <Project>{0401ffbc-cbcc-42a4-9c36-f3573bde14f7}</Project>
+      <Name>Gazprom.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
