--- a/Gazprom.Data/Gazprom.Data.csproj
+++ b/Gazprom.Data/Gazprom.Data.csproj
@@ -49,8 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DropCreateIfModelChangesSqlCeInitializer.cs" />
-    <Compile Include="EFTestDbContext.cs" />
+    <Compile Include="GasNominations_Endur_prodContext.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Migrations\201509011637599_initial.cs" />
+    <Compile Include="Migrations\201509011637599_initial.Designer.cs">
+      <DependentUpon>201509011637599_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryInitializer.cs" />
   </ItemGroup>
@@ -63,6 +68,11 @@
       <Project>{6a9129a4-a568-4e68-a4f0-5fa7856288ff}</Project>
       <Name>Gazprom.BigBoy.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201509011637599_initial.resx">
+      <DependentUpon>201509011637599_initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
