--- a/Gazprom.Data/Gazprom.Data.csproj
+++ b/Gazprom.Data/Gazprom.Data.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201509011637599_initial.Designer.cs">
       <DependentUpon>201509011637599_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509011654079_NewPermisionsTableAdded.cs" />
+    <Compile Include="Migrations\201509011654079_NewPermisionsTableAdded.Designer.cs">
+      <DependentUpon>201509011654079_NewPermisionsTableAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryInitializer.cs" />
@@ -72,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201509011637599_initial.resx">
       <DependentUpon>201509011637599_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509011654079_NewPermisionsTableAdded.resx">
+      <DependentUpon>201509011654079_NewPermisionsTableAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
