--- a/EfTestConsole/EfTestConsole.csproj
+++ b/EfTestConsole/EfTestConsole.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Demonstration\EfQueryGeneration.cs" />
     <Compile Include="Helpers\ObjectQueryExtensions.cs" />
+    <Compile Include="Helpers\SqlScriptGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
