--- a/Gazprom.Data/AdventureWorks.Data.csproj
+++ b/Gazprom.Data/AdventureWorks.Data.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0401FFBC-CBCC-42A4-9C36-F3573BDE14F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gazprom.Data</RootNamespace>
-    <AssemblyName>Gazprom.Data</AssemblyName>
+    <RootNamespace>AdventureWorks.Data</RootNamespace>
+    <AssemblyName>AdventureWorks.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
