--- a/EfTest.AdventureWorks.Model/EfTest.AdventureWorks.Model.csproj
+++ b/EfTest.AdventureWorks.Model/EfTest.AdventureWorks.Model.csproj
@@ -50,6 +50,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201512281558324_initial.cs" />
+    <Compile Include="Migrations\201512281558324_initial.Designer.cs">
+      <DependentUpon>201512281558324_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512301634257_NewTableTestEntity1.cs" />
+    <Compile Include="Migrations\201512301634257_NewTableTestEntity1.Designer.cs">
+      <DependentUpon>201512301634257_NewTableTestEntity1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AddressType.cs" />
     <Compile Include="Models\AdventureWorksContext.cs" />
@@ -200,6 +209,7 @@
     <Compile Include="Models\StateProvince.cs" />
     <Compile Include="Models\Store.cs" />
     <Compile Include="Models\StoreContact.cs" />
+    <Compile Include="Models\TestEntity1.cs" />
     <Compile Include="Models\TransactionHistory.cs" />
     <Compile Include="Models\TransactionHistoryArchive.cs" />
     <Compile Include="Models\UnitMeasure.cs" />
@@ -228,8 +238,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201512281558324_initial.resx">
+      <DependentUpon>201512281558324_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512301634257_NewTableTestEntity1.resx">
+      <DependentUpon>201512301634257_NewTableTestEntity1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
