--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AdventureWorks.Data\packages.config" />
+  <repository path="..\EfTest.AdventureWorks.Data.SqlServer\packages.config" />
   <repository path="..\EfTest.AdventureWorks.Model\packages.config" />
   <repository path="..\EfTestConsole\packages.config" />
   <repository path="..\Gazprom.BigBoy.Model\packages.config" />
