--- a/EfTest.AdventureWorks.Data.SqlServer/EfTest.AdventureWorks.Data.SqlServer.csproj
+++ b/EfTest.AdventureWorks.Data.SqlServer/EfTest.AdventureWorks.Data.SqlServer.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0401FFBC-CBCC-42A4-9C36-F3573BDE14F7}</ProjectGuid>
+    <ProjectGuid>{134DCBD5-908C-4F10-AD8F-3BC079A74AD1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdventureWorks.Data</RootNamespace>
-    <AssemblyName>AdventureWorks.Data</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>EfTest.AdventureWorks.Data.SqlServer</RootNamespace>
+    <AssemblyName>EfTest.AdventureWorks.Data.SqlServer</AssemblyName>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -50,23 +50,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DropCreateIfModelChangesSqlCeInitializer.cs" />
-    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="AdventureWorksContext.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="RepositoryInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <Folder Include="Initializers\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\AdventureWorks.Data\EfTest.AdventureWorks.Data.csproj">
+      <Project>{0401ffbc-cbcc-42a4-9c36-f3573bde14f7}</Project>
+      <Name>EfTest.AdventureWorks.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EfTest.AdventureWorks.Model\EfTest.AdventureWorks.Model.csproj">
       <Project>{6a9129a4-a568-4e68-a4f0-5fa7856288ff}</Project>
       <Name>EfTest.AdventureWorks.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
