--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,7 +3,9 @@
   <repository path="..\AdventureWorks.Data\packages.config" />
   <repository path="..\EfTest.AdventureWorks.Data.SqlServer\packages.config" />
   <repository path="..\EfTest.AdventureWorks.Model\packages.config" />
+  <repository path="..\EfTest.AdventureWorks.Tests\packages.config" />
   <repository path="..\EfTestConsole\packages.config" />
+  <repository path="..\EfTestWebApi\packages.config" />
   <repository path="..\Gazprom.BigBoy.Model\packages.config" />
   <repository path="..\Gazprom.Data\packages.config" />
 </repositories>
