--- a/AdventureWorks.Data/EfTest.AdventureWorks.Data.csproj
+++ b/AdventureWorks.Data/EfTest.AdventureWorks.Data.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBaseRepository.cs" />
     <Compile Include="IProductRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
