--- a/EfTest.AdventureWorks.Tests/packages.config
+++ b/EfTest.AdventureWorks.Tests/packages.config
@@ -3,5 +3,8 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
   <package id="EntityFramework.Testing" version="1.0.0-alpha2" targetFramework="net451" />
   <package id="EntityFramework.Testing.Moq" version="1.0.0-apha2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
 </packages>
