--- a/EfTestConsole/EfTestConsole.csproj
+++ b/EfTestConsole/EfTestConsole.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -57,6 +61,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Benchmarks\BencherBase.cs" />
+    <Compile Include="Benchmarks\BenchResult.cs" />
+    <Compile Include="Benchmarks\DapperBencher.cs" />
+    <Compile Include="Benchmarks\DataTableBencher.cs" />
+    <Compile Include="Benchmarks\EntityFrameworkNoChangeTrackingBencher.cs" />
+    <Compile Include="Benchmarks\EntityFrameworkNormalBencher.cs" />
+    <Compile Include="Benchmarks\IBencher.cs" />
+    <Compile Include="Benchmarks\Massive.cs" />
+    <Compile Include="Benchmarks\MassiveBencher.cs" />
+    <Compile Include="Benchmarks\RawDbDataReaderBencher.cs" />
+    <Compile Include="Demonstration\EfBenchmarks.cs" />
     <Compile Include="Demonstration\EfCaching.cs" />
     <Compile Include="Demonstration\EfProductRepositoryTest.cs" />
     <Compile Include="Demonstration\EfQueryGeneration.cs" />
@@ -89,6 +104,7 @@
       <Name>EfTest.AdventureWorks.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
