--- a/AdventureWorks.Data/EfTest.AdventureWorks.Data.csproj
+++ b/AdventureWorks.Data/EfTest.AdventureWorks.Data.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBaseRepository.cs" />
+    <Compile Include="IContactRepository.cs" />
     <Compile Include="IProductRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
