--- a/EfTest.AdventureWorks.Data.SqlServer/EfTest.AdventureWorks.Data.SqlServer.csproj
+++ b/EfTest.AdventureWorks.Data.SqlServer/EfTest.AdventureWorks.Data.SqlServer.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -42,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,11 +55,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdventureWorksContext.cs" />
+    <Compile Include="Dapper\Repositories\ContactRepository.cs" />
+    <Compile Include="EntityFramework\AdventureWorksContext.cs" />
+    <Compile Include="EntityFramework\Repositories\ContactRepository.cs" />
+    <Compile Include="Massive\Repositories\ContactRepository.cs" />
+    <Compile Include="Massive\Contacts.cs" />
+    <Compile Include="Massive\Massive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\BaseRepository.cs" />
-    <Compile Include="Repositories\ProductRepository.cs" />
-    <Compile Include="Initializers\RepositoryInitializer.cs" />
+    <Compile Include="EntityFramework\Repositories\BaseRepository.cs" />
+    <Compile Include="EntityFramework\Repositories\ProductRepository.cs" />
+    <Compile Include="EntityFramework\Initializers\RepositoryInitializer.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
